# opencraft

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  HISTORY.md  README.md  build.bat  build.sh
include/: camera.h  mouse.h  player.h  screen.h  world.h
src/: camera.c  main.c  mouse.c  player.c  screen.c  world.c
